Add stripes to tables, to better stay in-line